Changing the photo

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="frame" class="img-thumb wow fadeInLeft" data-wow-delay="0.3s">
               <img
                 class="img-fluid"
-                src="assets/img/about/Iam.png"
+                src="assets/img/about/Iam.jpg"
                 alt="Anna Kladova Bohun"
               />
             </div>
