changing some small final things

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <h3 class="text-justify text-white">About me</h3>
               <br>
               <h5>
-                I have a deep passion for coding and creating beautiful, functional websites and web applications. Over the years, I've developed a range of skills in front-end web development, including HTML, CSS, JavaScript, and a variety of front-end frameworks such as React and Vue.
+                I have a deep passion for coding and creating beautiful, functional websites and web applications. I've developed a range of skills in front-end web development, including HTML, CSS, JavaScript, and a variety of front-end frameworks such as React and Vue.
               </h5>
               <br>
               <h5>
@@ -312,21 +312,21 @@
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">PhD in Biochemistry-Universidade Nova de Lisboa</h3>
-                    <span>2006 - 2010</span>
-                    <p class="line-text">
-                      My PhD Thesis was devoted to the involvence of the metal to the secondary and tertiary structure of the certain proteins from sulfate-reducing bacteria.
-                    </p>
-                  </div>
-                </li>
-                <li>
-                  <div class="content-text">
                     <h3 class="line-title">
                       FullStack Web Bootcamp-WBS Coding School
                     </h3>
                     <span>Oct 2022- Feb 2023</span>
                     <p class="line-text">
                       During Bootcamp I have learned lots of Frontend as well as Backend Techniques that are vital for the begginner Developer. Moreover, during our final project, I have learned such Techniques as PWA, Figma, AWS Amplify. 
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">PhD in Biochemistry-Universidade Nova de Lisboa</h3>
+                    <span>2006 - 2010</span>
+                    <p class="line-text">
+                      My PhD Thesis was devoted to the involvence of the metal to the secondary and tertiary structure of the certain proteins from sulfate-reducing bacteria.
                     </p>
                   </div>
                 </li>
