--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
               <h3 class="text-justify text-white">About me</h3>
               <br>
               <h5>
-                I have a deep passion for coding and creating beautiful, functional websites and web applications. I've developed a range of skills in front-end web development, including HTML, CSS, JavaScript, and a variety of front-end frameworks such as React and Vue.
+                I have a deep passion for coding and creating beautiful, functional websites and web applications. I've obtained a range of skills in front-end web development, including HTML, CSS, JavaScript, and a variety of front-end frameworks such as React and Vue.
               </h5>
               <br>
               <h5>
-                 I'm excited to continue developing my skills as a full-stack web developer and to work with a talented and dedicated team of professionals who share my passion for web development. If you're interested in learning more about my skills and experience, please don't hesitate to get in touch!
+                 I'm excited to continue developing my skills as a full-stack web developer and to work with a talent and dedicate team of professionals who share my passion for web development. If you're interested in learning more about my skills and experience, please don't hesitate to get in touch!
               </h5>
               <br>
               
