Changing the main text

--- a/index.html
+++ b/index.html
@@ -184,12 +184,16 @@
               <h3 class="text-justify text-white">About me</h3>
               <br>
               <h5>
-                I have a deep passion for coding and creating beautiful, functional websites and web applications. I've obtained a range of skills in front-end web development, including HTML, CSS, JavaScript, and a variety of front-end frameworks such as React and Vue.
+                I have a passion for coding and creating beautiful, functional Web applications. I've obtained a range of skills in both Frontend and Backend development letting me to occupy Frontend or FullStack Web Development Position. 
               </h5>
               <br>
               <h5>
-                 I'm excited to continue developing my skills as a full-stack web developer and to work with a talent and dedicate team of professionals who share my passion for web development. If you're interested in learning more about my skills and experience, please don't hesitate to get in touch!
+                 I'm excited to continue developing my skills as a full-stack web developer and to work with a talent and dedicate team of professionals who share the same passion.
               </h5>
+              <hr>
+              <h5 class="text-uppercase">
+                Let´s create our awesome project together! 
+              <h5>
               <br>
               
             </div>
