Adding one more work experience

--- a/index.html
+++ b/index.html
@@ -352,6 +352,15 @@
                     </p>
                   </div>
                 </li>
+                <li>
+                  <div class="content-text">
+                    <h3 class="line-title">Full Stack Web Developer, mini job</h3>
+                    <span> February 2023 - till now</span>
+                    <p class="line-text">
+                      I am currently developing a Lead Management System project that uses Java + Spring Boot for the backend and Vue.js Framework for the Frontend.  
+                    </p>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
